--- a/Unit_and_Integration_Task_B/js_calculator_start_point/package.json
+++ b/Unit_and_Integration_Task_B/js_calculator_start_point/package.json
@@ -18,5 +18,8 @@
     "mocha": "^3.1.2",
     "protractor": "^4.0.10",
     "webdriver-manager": "^10.2.7"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5"
   }
 }
